--- a/_posts/2020-12-12-JK-Go-微服务概览与治理.md
+++ b/_posts/2020-12-12-JK-Go-微服务概览与治理.md
@@ -241,23 +241,182 @@ gRPC (google Remote Procedure Call) **高性能开源统一RPC框架**
 
 #### HealthCheck 主动健康检测
 
-提供商和服务发现是正常，但是消费者和提供商之间网络异常
+频率为 15s 或 30s
+
+Health checks用于探测服务器是否能够处理rpc请求。客户端到服务器的运行状况检查可以通过点对点或某些控制系统进行。服务器可能未准备好接受请求，正在关闭或其他原因，这时他会选择答复“unhealthy”。如果在某个时间段内未收到响应或响应说不健康，则客户端可以采取相应的措施。
+
+GRPC服务可以用作简单的客户端到服务器方案和其他控制系统（例如负载平衡）的运行状况检查机制。grpc作为一个高级服务有这么些优点：第一，由于它本身是GRPC服务，因此进行健康检查的格式与普通rpc相同。第二，它具有丰富的语义，例如每个服务的健康状态。第三，作为GRPC服务，it is able reuse all the existing billing, quota infrastructure, 因此服务器可以完全控制运行状况检查服务的访问。
+
+https://github.com/grpc/grpc/blob/master/doc/health-checking.md
+
+```protobuf
+syntax = "proto3";
+
+package grpc.health.v1;
+
+message HealthCheckRequest {
+  string service = 1;
+}
+
+message HealthCheckResponse {
+  enum ServingStatus {
+    UNKNOWN = 0;
+    SERVING = 1;
+    NOT_SERVING = 2;
+    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
+  }
+  ServingStatus status = 1;
+}
+
+service Health {
+  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
+
+  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
+}
+```
 
 
+
+可以检测出来 提供商和服务发现是正常，但是消费者和提供商之间网络异常的情况。
 
 
 
 ### 服务发现
 
+分布式系统中，程序通过一个标识来获取服务列表，服务列表是能随着服务状态更新的。
+
+#### 客户端发现
+
+1. 客户端使用负载均衡算法，从服务注册表中，选择可用的服务实例
+
+2. 一个服务实例被启动时，它的网络地址会被写到注册表上
+
+3. 当服务实例下线时，再从注册表中删除
+
+4. 注册表通过心跳机制动态刷新
+
+   ![image-20201216173825561](/assets/img/image-20201216173825561.png)
+
+#### 服务端发现
+
+客户端直接向服务注册中心进行请求，服务注册中心再通过自身负载均衡策略，将请求路由到可用的服务实例上。
+
+
+
+#### 对比
+
+| 客户端模式                                                   | 服务端模式                                                   |
+| :----------------------------------------------------------- | :----------------------------------------------------------- |
+| 只需要周期性获取列表，在调用服务时可以直接调用少了一个网络跳转。但需要在每个客户端维护获取列表和负载均衡逻辑。 | 简单                                                         |
+| 可用性高，即使注册中心出现故障也能正常工作                   | 可用性由路由器中间件决定，路由中间件故障则所有服务不可用，同时，由于所有调度以及存储都由中间件服务器完成，**中间件服务器可能会面临过高的负载** |
+| 服务上下线对调用方有影响（会出现短暂调用失败）               | 服务上下线调用方无感知                                       |
+
+> 微服务的核心是去中心化，我们使用客户端发现模式
+
+
+
+#### 各种服务发现对比
+
+| Feature              | Consul                 | zookeeper             | etcd              | euerka                                                       |
+| :------------------- | :--------------------- | :-------------------- | :---------------- | :----------------------------------------------------------- |
+| 服务健康检查         | 服务状态，内存，硬盘等 | (弱)长连接，keepalive | 连接心跳          | 可配支持                                                     |
+| 多数据中心           | 支持                   | —                     | —                 | —                                                            |
+| kv存储服务           | 支持                   | 支持                  | 支持              | —                                                            |
+| 一致性算法           | raft                   | paxos                 | raft              | —                                                            |
+| cap                  | cp                     | cp                    | cp                | ap                                                           |
+| 使用接口(多语言能力) | 支持http和dns          | 客户端                | http/grpc         | http（[sidecar](https://www.baidu.com/s?wd=sidecar&tn=24004469_oem_dg&rsv_dl=gh_pl_sl_csd)） |
+| watch支持            | 全量/支持long polling  | 支持                  | 支持 long polling | 支持 long polling/大部分增量                                 |
+| 自身监控             | metrics                | —                     | metrics           | metrics                                                      |
+| 安全                 | acl /https             | acl                   | https支持（弱）   | —                                                            |
+| spring cloud集成     | 已支持                 | 已支持                | 已支持            | 已支持                                                       |
+
+根据实际应用场景选择服务发现组件
+
+如果是海量服务发现和注册，服务状态可以弱一致，需要的是AP系统
+
+AP系统可能出现的问题，牺牲强一致性，达到最终一致性：
+
+1. 注册的事件延迟
+   1. 没事，用旧的
+2. 注销的时间延迟
+   1. 客户端有健康检查
+   2. 负载均衡
+   3. 重试
+
+
+
+#### euerka服务发现过程
+
+1. 定位资源的方式
+
+   appid + port
+
+   business.service.method : port
+
+   还可以附加更多的元数据：权重、染色标签、集群等
+
+2. 服务提供商注册后，euerka节点 30s心跳一次；
+
+   注册，心跳，下线，euerka节点都需要进行同步，注册和下线需要进行长轮询推送
+
+   注意点：
+
+   新启动euerka节点，需要同步数据，JVM预热
+
+   euerka节点故障时，提供商不建议重启和发布
+
+3. Server 定期(60s) 检测失效(90s)的实例，失效 则剔除。短时间里丢失了大量的心跳连接(15 分钟内心跳低于期望值*85%)，开启自我保护， 保留过期服务不删除。
+
+
+
+### 多集群
+
+L0服务，多集群必要性
+
+1. 单一集群 N+2 的方式来冗余姐弟那
+2. 单一集群可能故障，需要多集群
+3. 单个机房内的机房故障导致问题
+
+多集群实现：
+
+给某个appid服务建立多集群，元数据加入集群。
+
+集群的设置通过k8s启动时候，读取环境变量
+
+多集群的演变
+
+1. 不同服务，直播，游戏用不同集群，集群切换时候，导致缓存命中率低，因为玩游戏的人可能很少看直播，用户没有正交。
+   - 解决办法，微服务同时连接多个集群，让所有数据热起来。C连 C01 和 C02
+   - ![image-20201216211753662](/assets/img/image-20201216211753662.png)
+2. 微服务太多，长连接导致的内存和CPU开销，HealthCheck可以高达30%。但是短链接会导致极大的资源成本和延迟
+   - 解决办法，选取合适的子集大小和选择算法
+   - 通常20-100个后端，部分场景需要大子集， 比如大批量读写操作。 • 后端平均分给客户端。 • 客户端重启，保持重新均衡，同时对后端重启保 持透明，同时连接的变动最小。
+   - ![image-20201216212122497](/assets/img/image-20201216212122497.png)
+
+
+
+### 多租户
+
+在一个微服务架构中允许**多系统共存**是利用微服务稳定性以及模块化最有效的方式之一。
+
+这种方式被成为多租户，租户可以是测试，金丝雀发布（灰度测试），影子系统
+
+核心就是：
+
+在RPC消息中携带元数据，元数据标识出路由到特殊的染色节点
+
+数据库、缓存、消息队列等做线上的影子系统。
+
+外网请求抹除掉元数据
 
 
 
 
 
-
-### 多集群 & 多租户
-
-
-
-
-
+> 灰度发布又叫金丝雀发布，灰度是指在黑与白之间，能够平滑过渡的一种发布方式。简单来讲，一个产品，需要快速迭代开发上线，一方面要保证质量，另一方面保证刚上线的系统，这时候就需要设计一套灰度发布系统，让一部分用户继续使用产品A，另一部用户使用产品B，一旦出现问题可以很快的控制影响，如果用户对B没有什么反对意见，那么逐步扩大范围，把所有用户都迁移到B上面来。
+>
+> 灰度发布可以保证整体系统的稳定，在初始灰度的时候就可以发现、调整问题，以保证其影响度。
+>
+> 为什么叫金丝雀发布（Canary）？
+>
+> 以前，旷工开矿，在下矿洞前需要检查下方是否有毒气，矿工们先会放一只金丝雀进去探是否有有毒气体，看金丝雀能否活下来。
