--- a/_posts/2020-12-12-模板.md
+++ b/_posts/2020-12-12-模板.md
@@ -1,6 +1,7 @@
 ---
-title: 第01周：微服务（微服务概览与治理）
-category: JK-Go进阶训练营
-typora-root-url: ..
+title: 标题
+category: 模板
+typora-root-url: ../../
 ---
 
+ 
