--- a/_posts/分布式系统/2020-12-16-CAP.md
+++ b/_posts/分布式系统/2020-12-16-CAP.md
@@ -1,7 +1,7 @@
 ---
 title: CPA
 category: 分布式系统
-typora-root-url: ..
+typora-root-url: ../..
 ---
 
 > 在一个分布式系统中，网络故障和节点宕机是常态，分区容错性（P）是一定需要的，因此设计系统时需要在可用性（A）和一致性（C）间进行权衡。
