--- a/_posts/Golang/2020-10-01-GC.md
+++ b/_posts/Golang/2020-10-01-GC.md
@@ -35,7 +35,7 @@ typora-root-url: ../..
 
 ### Golang的GC
 
-Go 的 GC 目前使用的是无分代（对象没有代际之分）、不整理（回收过程中不对对象进行移动与整理）、并发（与用户代码并发执行）的三色标记清扫算法。
+Go 的 GC 目前使用的是无分代（对象没有代际之分）、不整理（回收过程中不对对象进行移动与整理）、并发（与用户代码并发执行）的三色标记清除算法。
 
 没用对象整理的原因：
 
