不同语言GC补充

--- a/_posts/Golang/2020-10-01-GC.md
+++ b/_posts/Golang/2020-10-01-GC.md
@@ -192,8 +192,8 @@ go tool trace
 
 从原理上而言，所有的语言都能够自行实现 GC。从语言诞生之初就提供 GC 的语言，例如：
 
-- Python
-- JavaScript
+- Python 引用计数 + 分代回收
+- JavaScript 标记清除
 - Java
 - Objective-C
 - Swift
