--- a/_posts/Golang/2020-10-01-基础.md
+++ b/_posts/Golang/2020-10-01-基础.md
@@ -21,7 +21,7 @@ category: Golang
 
 #### 内存布局
 
-一个结构体内的内存地址是连续的
+一个结构体内的内存地址是连续的，但不是紧凑的。要根据内存边界，进行内存对齐
 
 ![image-20201012161848194](D:\work\learn\lihenan1993.github.io\assets\img\image-20201012161848194-1607523402522.png)
 
