--- a/_posts/Golang/2020-12-14-GPM调度模型.md
+++ b/_posts/Golang/2020-12-14-GPM调度模型.md
@@ -1,5 +1,5 @@
 ---
-title: Golang中Goroutine的调度流程
+title: GPM调度模型
 category: Golang
 typora-root-url: ../..
 ---
@@ -16,7 +16,7 @@ goruntine 与 系统线程是多对多关系，技能利用多核CPU资源，又
 
 
 
-- M (Machine) 操作系统线程
+- M (Machine) 操作系统**线程**
 
    一个M被创建后会在 P空闲队列中获取并绑定P，否则进入阻塞状态
 
@@ -36,7 +36,7 @@ goruntine 与 系统线程是多对多关系，技能利用多核CPU资源，又
 
   每个P维护一个本地队列，存放G
 
-  当本地队列满时会拿出一半放入全局队列
+  **当本地队列满时会拿出一半放入全局队列**
 
 - 全局队列
 
@@ -50,7 +50,7 @@ goruntine 与 系统线程是多对多关系，技能利用多核CPU资源，又
 
 1. P首先有60/61概率从本地队列获取G，1/61从全局队列获取G
 2. 全局队列没有G，则从本地队列获取G
-3. 本地队列没有G，从其他P的本地队列窃取G
+3. 本地队列没有G，**从其他P的本地队列窃取G**
 4. 窃取不到从全局队列获取一些G到本地队列
 
 P获取到G后，绑定的M负责执行G，M必须是运行状态的线程
