--- a/_posts/JK-Golang/2020-12-12-JK-Go-微服务概览与治理.md
+++ b/_posts/JK-Golang/2020-12-12-JK-Go-微服务概览与治理.md
@@ -34,6 +34,10 @@ typora-root-url: ../..
 
 围绕业务功能构建的，服务**关注单一业务**，服务间采用**轻量级的通信机制**，可以全自动独立部署，可以使用**不同的编程语言**和数据存储技术。
 
+
+
+#### 微服务的优点
+
 通过组件快速开发系统，使得整个系统变得清晰灵活。
 
 - 原子服务 
@@ -41,12 +45,9 @@ typora-root-url: ../..
 - 隔离部署
 - 去中心化服务治理
 
-缺点
 
-- 基础设置的建设、复杂度高
-- 联调困难
 
-#### 微服务的不足
+#### 微服务的缺点
 
 1. 微服务是分布式系统，不得不用RPC或者消息传递，来实现进程间通讯；
 
@@ -57,6 +58,8 @@ typora-root-url: ../..
    例如： ABC请求 ，耗时是A+B+C ，其实很多时候没必要串行调用，微服务可以并行调用。服务降级
 
 3. 分区的数据库架构，同时更新多个业务主题的事务很普遍。保证数据一致性，挑战很大
+
+   > [微服务分布式事务4种解决方案实战](https://zhuanlan.zhihu.com/p/100279671)
 
 4. 测试很复杂，不知道如何联调
 
@@ -373,7 +376,7 @@ AP系统可能出现的问题，牺牲强一致性，达到最终一致性：
 
 L0服务，多集群必要性
 
-1. 单一集群 N+2 的方式来冗余姐弟那
+1. 单一集群 N+2 的方式来冗余节点
 2. 单一集群可能故障，需要多集群
 3. 单个机房内的机房故障导致问题
 
