--- a/_posts/Go语言并发之道/2020-12-13-chapter3.md
+++ b/_posts/Go语言并发之道/2020-12-13-chapter3.md
@@ -404,3 +404,96 @@ engine.handleHTTPRequest(c)
 // 再扔回 pool 中
 engine.pool.Put(c)
 ```
+
+
+
+## channel
+
+```go
+// 无缓冲
+c := make(chan string)
+// 有缓冲
+c := make(chan string, 1)
+// 读
+a := <-c
+// 写
+c<- "hello"
+// range, chan关闭自动终止循环
+for v := range c {
+    
+}
+
+```
+
+1. 从已经关闭的chan读数据
+
+   ```go
+   v,ok := <- intChan
+   返回：
+   false, 0
+   ```
+
+2. 没缓冲先写会阻塞，有缓冲写满会阻塞
+
+
+
+## select语句
+
+```go
+// 超时退出
+select {
+    case <-c:
+    // do something
+    case <-d:
+    // do something
+    case <-time.After(1 * time.Second)
+    break;
+}
+
+// 随机选择 c和d执行,都阻塞则等待
+for {
+    select {
+        case <-c:
+        case <-d:
+    }
+}
+
+```
+
+select 的 default 是在case阻塞的时候执行，一般配合for使用
+
+```go
+package main
+
+import (
+	"fmt"
+	"time"
+)
+
+func main() {
+	done := make(chan interface{})
+	go func() {
+		time.Sleep(5 * time.Second)
+		close(done)
+	}()
+
+	workCount := 0
+loop:
+	for {
+		select {
+		case <-done:
+			break loop
+		default:
+			// 模拟工作行为
+			workCount++
+			time.Sleep(1 * time.Second)
+		}
+	}
+
+	fmt.Printf("结束之前，执行%d次工作", workCount)
+}
+
+
+结束之前，执行5次工作
+```
+
