--- a/_posts/JK-Golang/2020-12-29-工程化.md
+++ b/_posts/JK-Golang/2020-12-29-工程化.md
@@ -175,3 +175,14 @@ google官方提供了包装类 wrappers
 8. 如果错误信息携带在 gRPC 的 resp message 里面，那么判断的时候要先判断 err != nil ， 再判断 message内容，是不是错误信息。 相当于每个resp的 message 都必须去判断。
 
 ![image-20201230160955420](/assets/img/image-20201230160955420.png)
+
+
+
+### API设计
+
+1. 读数据库和修改数据库分离，用两个接口
+2. 修改的话，对外只暴露一个接口
+3. FieldMask
+
+https://www.bookstack.cn/read/API-design-guide/API-design-guide-02-%E9%9D%A2%E5%90%91%E8%B5%84%E6%BA%90%E7%9A%84%E8%AE%BE%E8%AE%A1.md
+
