--- a/_posts/Redis/2020-12-29-多机数据库的实现.md
+++ b/_posts/Redis/2020-12-29-多机数据库的实现.md
@@ -41,9 +41,9 @@ SLAVEOF 127.0.0.1 6379
 ### 注意事项
 
 1. 主服务器如果没开启持久化，就要禁用自动重启。否则重启后主数据库被清空，从数据库复制住数据库，数据也会被清空。
-
 2. 断线后，从服务器会主动同步主服务器，完整同步或者部分同步
 3. 主从服务器可以都不开身份验证，或者都开启且密码相同。否则连接失败
+4. 从库默认是只读的，可配置成读写
 
 
 
