--- a/_posts/JK-Golang/2020-12-12-JK-Go-微服务概览与治理.md
+++ b/_posts/JK-Golang/2020-12-12-JK-Go-微服务概览与治理.md
@@ -227,12 +227,10 @@ gRPC (google Remote Procedure Call) **高性能开源统一RPC框架**
 优点：
 
 1. 多语言：语言中立，支持多种语言。 
-
 2. 轻量级、高性能：序列化支持 PB(Protocol Buffer)和 JSON，PB 是一种语言无关的高性能序列化框架。
-
 3. 移动端：**基于标准的 HTTP2 设计，支持双向流、消息头压缩、单 TCP 的多路复用**、服务端推送等特性， 这些特性使得 gRPC 在移动端设备上更加省电和节省 网络流量。
-
 4. IDL：基于文件定义服务，通过 proto3 工具生成指定 语言的数据结构、服务端接口以及客户端 Stub。 
+5. 基于http2.0的stream
 
 缺点：
 
