--- a/_posts/JK-Golang/2020-12-29-工程化.md
+++ b/_posts/JK-Golang/2020-12-29-工程化.md
@@ -12,32 +12,22 @@ typora-root-url: ../../
 
 ```
 project-layout
-├─go.mod
-├─README.md
-│
 ├─api
+│  └─account-admin
+│      └─v1
 ├─cmd
+├─configs
+├─internal
 │  ├─account-admin
-│  │  │  main.go
-│  │  │
-│  │  └─account-admin
-│  │      │  OWNERS.md
-│  │      │  README.md
-│  │      │
-│  │      ├─api
-│  │      ├─cmd
-│  │      ├─configs
-│  │      ├─internal
-│  │      │  ├─dao
-│  │      │  ├─model
-│  │      │  └─service
-│  │      └─server
+│  │  ├─dao
+│  │  ├─model
+│  │  ├─pkg
+│  │  ├─server
+│  │  └─service
 │  ├─account-interface
 │  ├─account-job
 │  ├─account-service
 │  └─account-task
-├─configs
-├─internal
 ├─pkg
 │  ├─cache
 │  │  ├─memcache
@@ -59,7 +49,7 @@ project-layout
 
 - /cmd
 
-  项目主代码
+  编译好的程序
 
 - /pkg
 
@@ -73,7 +63,7 @@ project-layout
 
   测试数据，如果项目很大，可以建子目录，用 "." 或者 "_" 开头，让GO忽略
 
-- /cmd/
+- /internal/
 
   微服务中的 app 服务类型分为4类：interface、service、job、admin。
   interface: 对外的 BFF 服务，接受来自用户的请求，比如暴露了 HTTP/gRPC 接口。
@@ -82,7 +72,7 @@ project-layout
   job: 流式任务处理的服务，上游一般依赖 message broker。
   task: 定时任务，类似 cronjob，部署到 task 托管平台中。
 
-- /cmd/appName/
+- /internal/appName/
 
   api: 放置 API 定义(protobuf)，以及对应的生成的 client 代码，基于 pb 生成的 swagger.json。
   configs: 放服务所需要的配置文件，比如database.yaml、redis.yaml、application.yaml。
@@ -186,3 +176,104 @@ google官方提供了包装类 wrappers
 
 https://www.bookstack.cn/read/API-design-guide/API-design-guide-02-%E9%9D%A2%E5%90%91%E8%B5%84%E6%BA%90%E7%9A%84%E8%AE%BE%E8%AE%A1.md
 
+
+
+
+
+# 配置
+
+四大类：
+
+- 环境变量
+
+  1. Region： 区域  华中 华北
+  2. Zone： 地区 北京
+  3. Cluster： 集群 01
+  4. Environment: Pr 生产
+  5. Color： 染色
+  6. Discovery： 服务发现
+  7. AppID
+  8. Host
+
+  通过在线运行时平台打入到容器或者物理机，供kit库读取使用
+
+- 静态配置
+
+  资源需要初始化的配置信息，比如 http/gRPC server、redis、mysql等
+
+  1. 不建议在线热更新，很可能导致业务事故
+  2. 变更应该走迭代发布流程
+  3. 基础库很难做热更新
+
+- 动态配置
+
+  应用程序可能需要一些在线的开关，控制业务的一些简单策略
+
+  1. 建议用基础类型，不要用复杂结构体
+  2. 起goroutine轮训数据库
+
+- 全局配置
+
+  依赖的组件和中间件都有大量的默认配置或者指定配置
+
+  1. 在各个项目里大量拷贝复制，容易出错
+  2. 使用全局配置模板来定制化常用的组件，然后在特化的应用里进行局部替换
+  3. 配置中心的全局模板
+
+### 配置文件加载
+
+1. 配置对象初始化与格式化分离
+2. 用pb文件定义配置对象格式，warp定义非必须项
+3. 先加载默认格式模板，再加载自定义模板
+
+```go
+func main() {
+  // load config file from yaml.
+  c := new(redis.Config)
+  _ = ApplyYAML(c, loadConfig())
+  r, _ := redis.Dial(c.Network, c.Address, Options(c)...)
+}
+
+func ApplyYAML(s *redis.Config, yml string) error {
+  js, err := yaml.YAMLToJSON([]byte(yml))
+  if err != nil {
+    return err
+  }
+  return ApplyJSON(s, string(js))
+}
+// Options apply config to options.
+func Options(c *redis.Config) []redis.Options {
+  return []redis.Options{
+    redis.DialDatabase(c.Database),
+    redis.DialPassword(c.Password),
+    redis.DialReadTimeout(c.ReadTimeout),
+  }
+}
+```
+
+```protobuf
+syntax = "proto3";
+import "google/protobuf/duration.proto";
+import "google/protobuf/wrappers.proto";
+
+package config.redis.v1;
+
+// redis config.
+message redis {
+  string network = 1;
+  string address = 2;
+  int32 database = 3;
+  google.protobuf.StringValue password = 4;
+  google.protobuf.Duration read_timeout = 5;
+}
+
+```
+
+
+
+## 单元测试
+
+1. 利用docker compose 拉起所有需要的外部组件 ，mysql , mogodb , redis , kafka
+2. api直接利用 yapi进行测试
+3. 利用subtests
+4. 利用gomock
