--- a/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
+++ b/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
@@ -334,7 +334,7 @@ WHERE
 
 **“索引条件下推”，称为** Index Condition Pushdown (ICP)
 
-mysql5.6增加了一个针对索引性能的优化方案，可以利用索引把本来由服务层做的过滤操作下推到引擎层完成，较少了数据的传输，提升索引效率。
+mysql5.6增加了一个针对索引性能的优化方案，可以**利用索引把本来由服务层做的过滤操作下推到引擎层完成，较少了数据的传输，提升索引效率。**
 
 假设存在一张表结构如下：
 
@@ -362,3 +362,224 @@ SELECT * FROM people
 
 
 ### 使用联合索引执行查询时对应的扫描区间
+
+1. 根据索引，直接相邻的扫描边界，可以利用索引
+2. 一定要注意边界， key_part1 <= b and key_part2 = 'a' 时候， key_part1 = b 是可以利用索引的，只要检索到 key_part1 = b和key_part2='a'的索引即可
+3. 能间接利用索引的，会使用索引下推
+
+
+
+前提：
+
+```mysql
+KEY idx_key_part(key_part1, key_part2, key_part3)
+```
+
+索引先按照key_part1 排序，相同的时候按照key_part2排序，相同的时候按照key_part3排序
+
+Q1
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 = 'a';
+扫描区间： ['a','a']  边界条件： key_part1='a';
+```
+
+Q2
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 = 'a' AND key_part2 = 'b';
+扫描区间： [('a','b'),('a','b')]  边界条件： key_part1 = 'a' AND key_part2 = 'b';
+```
+
+因为 满足 key_part1 和 key_part2 一定相邻，所以查找过程是 
+
+从第一条 key_part1 = 'a' AND key_part2 = 'b' 的索引， 找到最后一条 key_part1 = 'a' AND key_part2 = 'b' 索引。
+
+Q3
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 = 'a' AND key_part2 = 'b'AND key_part3 = 'c';
+扫描区间： [('a','b','c'),('a','b','c')]  边界条件： key_part1 = 'a' AND key_part2 = 'b'AND key_part3 = 'c';
+```
+
+
+
+Q4
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 < 'a';
+扫描区间： (-无穷,'a']  边界条件： key_part1<'a';
+```
+
+
+
+Q5
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 = 'a' AND key_part2 > 'a' AND key_part2 < 'd';
+扫描区间： （('a','a'),('a','d')）  边界条件： key_part1 = 'a' AND key_part2 > 'a' AND key_part2 < 'd';
+```
+
+
+
+Q6
+
+```mysql
+SELECT * FROM single_table WHERE key_part2 = 'a';
+因为索引不是按照 key_part2直接排序的， key_part2 = 'a'的记录可能不是直接相邻， 所以无法使用当前索引
+```
+
+
+
+Q7
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 = 'a' AND key_part3 = 'c';
+扫描区间： ['a','a']  边界条件： key_part1='a';
+因为 key_part1 = 'a' 的时候不是直接按照key_part3排序
+所以key_part3不能减少扫描数量
+但是开启索引下推，可以减少回表操作，MySQL 5.6引入，默认开启
+```
+
+
+
+Q8
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 < 'b' AND key_part2 = 'a';
+扫描区间： (-无穷,'b')  边界条件： key_part1 < 'b';
+```
+
+因为对于符合 ` key_part1 < 'b'` 的索引，不是直接按 key_part2排序的 ，所以不能根据 key_part2 = 'b' 直接减少扫描的记录数量
+
+
+
+Q9
+
+```mysql
+SELECT * FROM single_table WHERE key_part1 <= 'b' AND key_part2 = 'a';
+扫描区间： [(-无穷,'b'),('b','a')]  边界条件： key_part1 < 'b' AND key_part1 = 'b' AND key_part2 = 'a';
+```
+
+与Q8的不同在于，当 key_part1='b' 时候，是可以根据索引 利用key_part2 ='a' 减少回表数量
+
+
+
+## 索引用于排序
+
+1. 如果不使用索引，需要检索所有符合条件的，在内存或者磁盘排序，称为文件排序
+2. 当有索引，就不用再排序了。
+
+### 使用联合索引排序时的注意事项
+
+1. `ORDER BY`语句的顺序，要按照索引建立方式
+
+   1. 部分使用索引也可以  `ORDER BY key_part1 , key_part2`
+   2. 左边为常量也可以 `WHERE key_part1 = 'a' AND key_part2 = 'b'ORDER BY key_part3 LIMIT 10`
+
+2. 不能使用索引的情况
+
+   1. DESC ASC混用 （MySQL 8支持）
+
+   2. 排序列包含非同一索引的列
+
+      ```mysql
+      SELECT * FROM single_table ORDER BY key1, key2 LIMIT 10
+      ```
+
+   3. 排序列是某个联合索引的索引列，但是这些排序列在联合索引中并不连续
+
+      ```mysql
+      SELECT * FROM single_table ORDER BY key_part1, key_part3 LIMIT 10
+      ```
+
+   4. 用来形成扫描区间的索引列与排序列不同
+
+      ```mysql
+      SELECT * FROM single_table WHERE key1='a' ORDER BY key2 LIMIT 10
+      ```
+
+   5. 排序列不是以单独列名的形式出现在 ORDER BY 子句中
+
+      ```mysql
+      SELECT * FROM single_table ORDER BY UPPER(key1) LIMIT 10;
+      ```
+
+## 索引用于分组
+
+```mysql
+SELECT key_part1,key_part2,key_part3 , count(*) FROM single_table GROUP BY key_part1,key_part2,key_part3;
+```
+
+1. 根据key_part1 相同分大组
+2. 大组中根据key_part2相同分小组
+3. 小组中根据key_part3相同分小小组
+4. 然后返回结果
+
+所以分组跟排序利用索引的条件一样
+
+索引和分组顺序一样，或者部分一样
+
+
+
+## 回表的代价
+
+有时候即使根据索引回表查数据，数据量很多，比如占总数据的99%，也会利用全表查询+文件排序的方式进行
+
+- 有效的方式是，利用LIMIT 条件限制返回数量，这样查询优化器会更倾向于使用索引进行查询
+
+
+
+## 创建索引准则
+
+1. 只为  `WHERE   ORBDER BY    GROUP BY`列创建索引
+
+   1. SELECT就没必要创建索引了，反正也要回表查
+
+2. 索引列中不重复值的个数要低
+
+   否则优化器会进行全表扫描
+
+3. 索引列的类型尽量小
+
+   1. tinyInt Mediumint,int ,bigInt 越小占用空间越少，内存加载的越快
+
+4. 字符串太长可以用前缀加索引
+
+   1. ```mysql
+      Add INDEX idx_key1(key1(10));
+      ```
+
+   2. 但是这样的索引不能用于排序
+
+5. 覆盖索引，查询列表最好只包含索引列
+
+   1. 可以不用回表
+
+6. 让索引列以列名的形式在搜索条件中单独出现
+
+   ```mysql
+   WHERE key2 * 2 < 4;
+   WHERE key2 < 4/2;
+   ```
+
+   第一种不会利用索引
+
+7. 为了尽可能少的让聚簇索引发生页面分裂的情况，建议主键设置自增属性
+
+8. 不要设计冗余和重复索引
+
+   ```mysql
+   ADD INDEX idx_key_part1(key_part1)
+   ```
+
+   因为已经有 key_part1 , key_part2 ,key_part3 的索引，本来就是按照key_part1排序的，没必要再建立
+
+   ```mysql
+   ADD INDEX idx_id(id);
+   ```
+
+   id本身就是主键，有聚簇索引，没必要再建立重复的二级索引
+
+
+
