--- a/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
+++ b/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
@@ -78,24 +78,28 @@ record_type = 0 普通记录
 
 ### 聚簇索引
 
-具备以下两个特点的B+树，称为聚簇索引
+具备以下两个特点（主键记录和页排序，叶子完整用户记录）的B+树，称为聚簇索引
 
-1. 使用记录主键值的大小进行记录和页的排序
+1. 使用记录**主键值**的大小进行记录和页的排序
    1. 页内记录按照主键大小排序分成很多组
    2. 每个组中主键值最大的记录在页内的偏移量会被当作槽依次存放在页目录中
    3. 各个页按主键大小排成一个双向链表
 2. B+树的叶子节点存储的是**完整的用户记录**
    1. 完整的用户记录：这个记录中存储了所有列的值，包括隐藏列
 
-InnoDB存储引擎会自动创建聚簇索引，聚簇索引就是数据的存储方式
+**InnoDB存储引擎会自动创建聚簇索引**，聚簇索引就是数据的存储方式
 
 
 
-InnoDB会自动为主键建立索引
+如何自动建立聚簇索引
 
-没有主键，用不允许为NULL的UNIQUE列建立索引
+> 主键，非空UNIQUE，自动加自增主键
 
-没有的话，InnoDB自动添加一个自增主键
+- InnoDB会自动为主键建立索引
+
+- 没有主键，用不允许为NULL的UNIQUE列建立索引
+
+- 没有的话，InnoDB自动添加一个自增主键
 
 
 
@@ -107,7 +111,7 @@ InnoDB会自动为主键建立索引
 
 1. B+树的叶子节点存储的并不是完整的用户记录，而是 **索引列 + 主键** 的值
 2. 根据索引列值排序，相同的话，根据主键排序
-3. 查到相应的主键后，还需要去聚簇索引回表查询具体的用户记录
+3. 查到相应的主键后，还需要去聚簇索引**回表查询具体的用户记录**
 
 下表使用C2列建立的二级索引，这个图其实是不准确的，目录项中还应该有主键
 
@@ -133,7 +137,7 @@ InnoDB会自动为主键建立索引
 
 1. 只是一个B+树
 2. 先比较c2 ，当c2相同时候，按c3顺序排序
-3. 叶子节点只有 多个索引列的值和主键
+3. 叶子节点只有 **多个索引列的值和主键**
 
 联合索引就是一种特殊的二级索引
 
@@ -208,7 +212,7 @@ CREATE TABLE single_table{
 ## 索引的代价
 
 1. 占用空间
-2. 增删改操作，都需要修改B+树索引，需要额外的时间调整记录排序，进行页分裂，页回收等操作
+2. 增删改操作，都需要修改B+树索引，需要额外的时间**调整记录排序，进行页分裂，页回收等操作**
 3. 评估使用哪个索引执行查询计划，索引多会加大成本分析耗时
 
 
@@ -477,30 +481,32 @@ SELECT * FROM single_table WHERE key_part1 <= 'b' AND key_part2 = 'a';
    1. 部分使用索引也可以  `ORDER BY key_part1 , key_part2`
    2. 左边为常量也可以 `WHERE key_part1 = 'a' AND key_part2 = 'b'ORDER BY key_part3 LIMIT 10`
 
-2. 不能使用索引的情况
+2. 排序不能使用索引的情况
+
+   > 升降序混用，不同索引混用，联合索引不连续用 ,扫描区间索引列与排序列不同， 排序列用函数
 
    1. DESC ASC混用 （MySQL 8支持）
 
    2. 排序列包含非同一索引的列
-
+   
       ```mysql
-      SELECT * FROM single_table ORDER BY key1, key2 LIMIT 10
+   SELECT * FROM single_table ORDER BY key1, key2 LIMIT 10
       ```
 
    3. 排序列是某个联合索引的索引列，但是这些排序列在联合索引中并不连续
-
+   
       ```mysql
-      SELECT * FROM single_table ORDER BY key_part1, key_part3 LIMIT 10
+   SELECT * FROM single_table ORDER BY key_part1, key_part3 LIMIT 10
       ```
 
    4. 用来形成扫描区间的索引列与排序列不同
-
+   
       ```mysql
-      SELECT * FROM single_table WHERE key1='a' ORDER BY key2 LIMIT 10
+   SELECT * FROM single_table WHERE key1='a' ORDER BY key2 LIMIT 10
       ```
 
    5. 排序列不是以单独列名的形式出现在 ORDER BY 子句中
-
+   
       ```mysql
       SELECT * FROM single_table ORDER BY UPPER(key1) LIMIT 10;
       ```
@@ -526,7 +532,7 @@ SELECT key_part1,key_part2,key_part3 , count(*) FROM single_table GROUP BY key_p
 
 有时候即使根据索引回表查数据，数据量很多，比如占总数据的99%，也会利用全表查询+文件排序的方式进行
 
-- 有效的方式是，利用LIMIT 条件限制返回数量，这样查询优化器会更倾向于使用索引进行查询
+- 有效的方式是，**利用LIMIT 条件限制返回数量**，这样查询优化器会更倾向于使用索引进行查询
 
 
 
@@ -534,27 +540,27 @@ SELECT key_part1,key_part2,key_part3 , count(*) FROM single_table GROUP BY key_p
 
 1. 只为  `WHERE   ORBDER BY    GROUP BY`列创建索引
 
-   1. SELECT就没必要创建索引了，反正也要回表查
+   - SELECT就没必要创建索引了，反正也要回表查
 
-2. 索引列中不重复值的个数要低
+2. 覆盖索引，查询列表最好只包含索引列
 
-   否则优化器会进行全表扫描
+   - 可以不用回表
 
-3. 索引列的类型尽量小
+3. 索引列中不重复值的个数要低
 
-   1. tinyInt Mediumint,int ,bigInt 越小占用空间越少，内存加载的越快
+   - 否则优化器会进行全表扫描
 
-4. 字符串太长可以用前缀加索引
+4. 索引列的类型尽量小
+
+   - tinyInt Mediumint,int ,bigInt 越小占用空间越少，内存加载的越快
+
+5. 字符串太长可以用前缀加索引
 
    1. ```mysql
       Add INDEX idx_key1(key1(10));
       ```
 
    2. 但是这样的索引不能用于排序
-
-5. 覆盖索引，查询列表最好只包含索引列
-
-   1. 可以不用回表
 
 6. 让索引列以列名的形式在搜索条件中单独出现
 
