--- a/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
+++ b/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
@@ -80,7 +80,7 @@ record_type = 0 普通记录
 
 具备以下两个特点（主键记录和页排序，叶子完整用户记录）的B+树，称为聚簇索引
 
-1. 使用记录**主键值**的大小进行记录和页的排序
+1. 使用记录**主键值**的从小到大进行记录和页的排序
    1. 页内记录按照主键大小排序分成很多组
    2. 每个组中主键值最大的记录在页内的偏移量会被当作槽依次存放在页目录中
    3. 各个页按主键大小排成一个双向链表
