--- a/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
+++ b/_posts/MySQL是怎样运行的/2021-1-2-B+树索引.md
@@ -469,6 +469,89 @@ SELECT * FROM single_table WHERE key_part1 <= 'b' AND key_part2 = 'a';
 
 
 
+## 单表查询中索引合并
+
+MySQL的索引使用优化方式，5.1提出
+
+对多个索引分别进行条件扫描，然后将它们各自的结果进行合并
+
+有三种合并方式：intersect(交集)，union(并集)，sort_union
+
+
+
+### intersect - 交集
+
+多个索引条件扫描得到的结果进行**交集运算**
+
+显然在多个索引提交之间是 AND 运算
+
+```mysql
+WHERE key1 = 'a' AND key3 = 'b';
+```
+
+1. 利用索引key1找到 符合 key1 = 'a'的记录
+2. 利用索引key3找到 符合 key3 = 'b'的记录
+3. 求交集
+4. 返回给客户端
+
+条件：
+
+1. 不同二级索引中获取到的二级索引记录都按照主键值排序
+   1. 有序集合求交集容易
+   2. 回表时候不是随机IO，因为已经根据主键排序好了
+
+
+
+利用聚簇索引的时候
+
+```mysql
+WHERE key1 = 'a' AND id > 9000;
+```
+
+因为 key1 的索引中  key1='a' 的记录是按照聚簇索引排序的，所以检索的时候，不用扫描 (9000, +无穷)的聚簇索引
+
+
+
+### Union - 并集
+
+```mysql
+WHERE key1 = 'a' OR key3 = 'b';
+```
+
+1. 根据key1的索引找出 key1 = 'a'的记录
+2. 根据key3的索引找出 key3 = 'b'的记录
+3. 求并集，去重后
+4. 返回给客户端
+
+条件：同上
+
+
+
+### Sort - Union   - 排序并集
+
+```mysql
+WHERE key1 < 'a' OR key3 > 'z'
+```
+
+1. 利用索引key1找到 符合 key1 < 'a'的记录
+2. 利用索引key3找到 符合 key3 > 'z'的记录
+3. 排序后，求交集
+4. 返回给客户端
+
+
+
+> 为什么并集有排序，而交集没有。
+>
+> 并集数据少
+>
+> 交集数据多，排序成本大
+
+
+
+
+
+
+
 ## 索引用于排序
 
 1. 如果不使用索引，需要检索所有符合条件的，在内存或者磁盘排序，称为文件排序
