--- a/_posts/Golang/2020-10-01-pprof.md
+++ b/_posts/Golang/2020-10-01-pprof.md
@@ -29,10 +29,14 @@ func main() {
 
    下载 [Graphviz](https://www2.graphviz.org/Packages/stable/windows/10/cmake/Release/x64/graphviz-install-2.44.1-win64.exe)
 
-   安装后将bin目录添加到PATH
+   安装后将bin目录添加到PATH ,安装的时候自己打勾
 
-   验证安装 dot -version  ,可能要注册引擎
+   管理员模式打开cmd 
 
+   dot -c
+   
+   验证安装 dot -version
+   
    
 
 #### 使用
