--- a/_posts/Golang/2020-10-01-pprof.md
+++ b/_posts/Golang/2020-10-01-pprof.md
@@ -45,7 +45,7 @@ func main() {
 
 2. 交互界面
 
-   go tool pprof http://localhost:6080/debug/pprof/heap
+   go tool pprof http://localhost:6080/debug/pprof/heap?seconds=30
 
    | 类型         | 描述                   |
    | :----------- | :--------------------- |
