--- a/_posts/Golang/2020-10-01-pprof.md
+++ b/_posts/Golang/2020-10-01-pprof.md
@@ -29,7 +29,7 @@ func main() {
 
    下载 [Graphviz](https://www2.graphviz.org/Packages/stable/windows/10/cmake/Release/x64/graphviz-install-2.44.1-win64.exe)
 
-   安装后将bin目录添加到PATH ,安装的时候自己打勾
+   **安装的时候选择path add to all user**
 
    管理员模式打开cmd 
 
@@ -45,7 +45,7 @@ func main() {
 
 2. 交互界面
 
-   go tool pprof http://localhost:6080/debug/pprof/heap?seconds=30
+   go tool pprof http://localhost:6080/debug/pprof/heap?seconds=30 
 
    | 类型         | 描述                   |
    | :----------- | :--------------------- |
@@ -63,3 +63,25 @@ func main() {
      - top n   查看占用最高的n个
      - list 正则匹配代码
      - web   利用Graphviz绘图
+
+
+
+### 拉取服务器的文件本地分析
+
+```
+curl -s http://127.0.0.1:6080/debug/pprof/profile?seconds=30 > cpu.prof
+curl -s http://127.0.0.1:6080/debug/pprof/allocs?seconds=30 > memory.prof
+curl -s http://127.0.0.1:6080/debug/pprof/heap?seconds=30 > heap.prof
+curl -s http://127.0.0.1:6080/debug/pprof/mutex?seconds=30 > mutex.prof
+curl -s http://127.0.0.1:6080/debug/pprof/goroutine?seconds=30 > goroutine.prof
+
+sz cpu.prof memory.prof heap.prof mutex.prof goroutine.prof
+```
+
+下载文件后
+
+```
+go tool ppro cpu.prof
+web
+```
+
